# db_coursework

./: 404.html  index.html  insomnia.json  pyproject.toml  service-worker.js  users.json
assets/css/: 0.styles.4c362210.css  0.styles.bd48480d.css
assets/js/: 10.309e7a03.js  11.9b3949aa.js  12.47479996.js  13.4c0bb532.js  13.c9c6b9eb.js  13.d95612bc.js  14.9fdefd92.js  14.ad9d6122.js  15.75aae096.js  16.d795544b.js  17.313cec10.js  18.413db224.js  19.d6fe9d79.js  2.e5576072.js  20.5bd650e2.js  20.b516ae82.js  21.86453167.js  21.a2a9ceb3.js  21.c2161803.js  22.29e25005.js  22.4521d8be.js  22.8fb4c272.js  23.a91478ba.js  23.cea2ced8.js  24.b651a1ad.js  24.eb02174a.js  25.4d49a96b.js  26.1cb50f23.js  3.6528a325.js  3.cdcc915e.js  3.d914bda8.js  4.0d7312bc.js  4.590a7006.js  5.56e7e5cb.js  5.87dca7d8.js  6.87c12d9c.js  7.e85790a3.js  8.e26f1429.js  9.3d35bda5.js  app.09a48ded.js  (+2 more)
conclusion/: index.html
design/: index.html
docs/: README.md
docs/.vuepress/: config.js
docs/conclusion/: README.md
docs/software/: README.md
docs/test/: README.md
intro/: index.html
requirements/: index.html  stakeholders-needs.html  state-of-the-art.html
software/: index.html
src/restful_backend/: app.py  db.py  server.py
src/restful_backend/resources/: dataset_categories.py  datasets.py  files.py  users.py
src/sql/: README.md
test/: index.html
use cases/: index.html
