[tool.poetry]
name = "restful-backend"
version = "0.1.0"
description = ""
authors = ["olhamish <olgami1402@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiomysql = "^0.2.0"
sanic-restful-api = "^0.2.0"
cryptography = "^41.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
